--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ after_failure:
 script:
   - make testcert.cert
   - make lint
-  - coverage run ./test.py -s
+  # - coverage run ./test.py -s
+  - ./test.py -s --filter=test_throughput_while_adjusting_servicecount
   - pipenv check
 
 # Push the results back to codecov
