--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ script:
   - make testcert.cert
   - make lint
   # - coverage run ./test.py -s
-  - ./test.py -s --filter=test_throughput_while_adjusting_servicecount
+  - coverage run ./test.py -s --filter=test_throughput_while_adjusting_servicecount
   - pipenv check
 
 # Push the results back to codecov
